docs(constants): 更新全局常量接口文档和验证分组定义
- 在 Constant 接口中补充排序方向、数据库相关常量的描述
- 优化常量接口的注释结构，增加使用说明
- 重命名多个常量分类标题，使其更加清晰明确
- 新增 Add、Edit、Query 验证分组接口
- 移除 Create 和 Update 验证分组接口
- 在 StreamUtils 工具类中添加空集合校验注释
- 优化加密解密拦截器中的代码注释和空值检查逻辑
- 在加密工具类中添加 SM3 加密方法和相关演示代码注释